Fixed whitespace under footer

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -182,7 +182,7 @@ h3,
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 33px;
+  height: 36px;
   color: #fff;
   margin-bottom: -30px;
   padding-top: -30px;
